--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,12 +3,22 @@
   "short_name": "magic-cupon",
   "icons": [
     {
-      "src": "/static/img/icons/android-chrome-192x192.png",
+      "src": "/static/img/icons/magic-cupon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/static/img/icons/android-chrome-512x512.png",
+      "src": "/static/img/icons/magic-cupon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/img/icons/magic-cupon-256x256.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/img/icons/magic-cupon-128x128.png",
       "sizes": "512x512",
       "type": "image/png"
     }
