--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "magic-cupon",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "Generador de Cupones",
   "author": "sebastian mujica",
   "private": true,
   "scripts": {
