--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "chalk": "^2.1.0",
     "connect-history-api-fallback": "^1.4.0",
     "copy-webpack-plugin": "^4.1.1",
+    "cryptr": "^4.0.0",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
+    "dgram": "^1.0.1",
+    "dns": "^0.2.2",
     "eslint": "^4.9.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.9.0",
@@ -34,17 +37,24 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "fs": "0.0.1-security",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
     "material-design-lite": "^1.3.0",
     "md5": "^2.2.1",
+    "module": "^1.2.5",
+    "mongodb": "^3.1.4",
+    "mongoose": "^5.2.14",
+    "net": "^1.0.2",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
+    "reverse-md5": "0.0.4",
     "rimraf": "^2.6.2",
     "semver": "^5.4.1",
     "shelljs": "^0.7.8",
     "sw-precache-webpack-plugin": "^0.11.4",
+    "tls": "0.0.1",
     "uglify-es": "^3.1.3",
     "url-loader": "^0.6.2",
     "vue": "^2.5.2",
